# Prodexa-AI

./: get_lib_versions.py  main.py  pyproject.toml  requirements.txt
data/: product_reviews.csv
notebooks/: test.ipynb
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py
prod_assistant/evaluation/: ragas_eval.py
prod_assistant/exception/: custom_exception.py
prod_assistant/logger/: __init__.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/prompt_library/: prompts.py
prod_assistant/retriever/: retrieval.py  retriever.py
prod_assistant/router/: main.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp.py  normal_generation_workflow.py
templates/: index.html
