[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[project]
name = "prodexa-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.13.5",
    "fastapi==0.116.1",
    "html5lib==1.1",
    "jinja2==3.1.6",
    "langchain==0.3.27",
    "langchain-astradb==0.6.1",
    "langchain_core==0.3.75",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "lxml==6.0.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "selenium==4.35.0",
    "streamlit==1.49.1",
    "undetected-chromedriver==3.5.5",
    "uvicorn==0.35.0",
    "structlog==25.4.0",
    "langgraph==0.6.7"
]

# Optional: authors, license
authors = [{ name = "Rishabh Porwal" }]
license = { text = "Proprietary" }

# Optional: CLI command (python -m pip install -e . ke baad yeh create hoga)
[project.scripts]
ecomm-assistant = "prodexa_ai.cli:main"

[tool.setuptools.packages.find]
where = ["prod_assistant"]
include = ["prodexa_ai*"]